fix the inconsistent header spacing

--- a/V2/assets/css/shared.css
+++ b/V2/assets/css/shared.css
@@ -59,7 +59,7 @@ hr {
 h1 {
 	font-size: 2em;
 	display: inline-block;
-	margin-bottom: .2em;
+	margin: 1.55em 0 0 0;
 }
 
 h2 {
